# ml_model_ai4pex

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: sample_offline_analysis.ipynb
examples/sample_dataset_for_github/: sample_eke_SO_JET.nc  sample_mke_SO_JET.nc  sample_sa_SO_JET.nc  sample_vor_SO_JET.nc
ml_model_ai4pex/: __init__.py  cnn.py  model_components.py  model_setup.py  parsing_args.py  predict_model.py  preprocess_data.py  train_model.py  unet.py
run/: config_model.yml  run_model.py  submit_model.sh  submit_test.sh
tests/: __init__.py  test_smoke.py
